# LearnScript

./: .gitignore  doc.md
1.shell/: doc.md  shell_note.docx
1.shell/demo/: cmd_paras.sh  echo_color.sh  json_demo.sh  xml_demo.sh  yaml_demo.sh
2.python/1.Base/1.syntax/1.baseOpt/: using_name.py  using_sys.py
2.python/1.Base/1.syntax/2.baseData/: list_comprehensions.py  using_dict.py  using_list.py  using_tuple.py
2.python/1.Base/1.syntax/3.control/: control.py  err_proc.py  func.py
2.python/1.Base/1.syntax/4.class/: class.py  class_base.py  repr_str.py
2.python/1.Base/1.syntax/5.module/: main.py  math_utils.py
2.python/1.Base/1.syntax/6.packages/: README.md  setup.py
2.python/1.Base/1.syntax/6.packages/demo_pkg/: __init__.py  math_operations.py  string_operations.py
2.python/1.Base/1.syntax/6.packages/tests/: test_demo_pkg.py
2.python/1.Base/1.syntax/7.demo/: Fibonacci.py  Hanoi.py  openCamera.py  script1.py
2.python/1.Base/1.syntax/7.demo/backup/: backup_ver1.py  backup_ver2.py  backup_ver3.py  backup_ver4.py
2.python/1.Base/10.progress_bar/: tqdm_demo.py
2.python/1.Base/11.timer/: readme.md  timer_apscheduler.py  timer_sched.py  timer_threading.py  timer_time.py
2.python/1.Base/12.subprocess/: mSubprocess.py
2.python/1.Base/13.iterator/: iterator.py  zip_demo.py
2.python/1.Base/2.baseOpt/: readFile.py
2.python/1.Base/3.thread/: 1.thread_create.py  10.thread_sync_queue.py  2.thread_create.py  3.thread_create.py  4.thread_create.py  5.thread_sync_lock.py  6.thread_sync_rlock.py  7.thread_sync_condition.py  8.thread_sync_event.py  9.thread_sync_semaphore.py  demo1.py  demo2.py  readMe.txt
2.python/1.Base/4.cmdPara/: 1.sys_argv_getopt.py  2.argparse.py
2.python/1.Base/5.global_para/model/: global_paras.py  main.py  modify_var.py  update_para.py
2.python/1.Base/5.global_para/sigFile/: main.py
2.python/1.Base/6.mulprocess/: 1.mulprocess.py  2.mulprocessSubClass.py  3.mulprocessQueue.py  4.mulprocessPipe.py  5.mulprocessManagers.py  6.mulprocessPool.py  7.mulprocessPoolMap.py  ReadMe.md
2.python/1.Base/7.pipeStdin/: ansi_escape_code_prn.py  prn.py  stdin.py
2.python/1.Base/8.fileopt/: file_opt.py
2.python/1.Base/9.net/tcp/: client.py  server.py
2.python/1.Base/9.net/udp/: client.py  server.py
2.python/2.Tools/matplotlib/: 3D_scatterplot.py  ReadMe  baseDemo.py  realTimeLineLen.py  realTimeLineTag.py  tableDemo.py  tmp.diff
2.python/2.Tools/matplotlib/quiver/: mDemo2D.py  mDemo3D.py  quiver3d.py  quiver_simple_demo.py
2.python/2.Tools/matplotlib/slider/: slider.py  sliders.py
2.python/2.Tools/numpy/: numpyDemo.py
2.python/2.Tools/pandas/: 1.pandasSeries.py  2.pandasDataFrame.py  3.pandasCSV.py  4.pandasJSON.py  5.pandasDataClean.py  6.pandasExcel.py  excel_testdata.xlsx  nested_deep.json  sites.json
2.python/2.Tools/pyautogui/: test.py
2.python/2.Tools/pyecharts/: ReadMe  test.py  test2.py
2.python/2.Tools/pytest/: doc.md
2.python/2.Tools/pytest/demo/: Makefile  run.py  test_class.py  test_sample.py
2.python/2.Tools/tkinter/: doc.md  main.py
2.python/2.Tools/xml_json_yaml/: json_demo.py  readme.md  xml_demo.py  yaml_demo.py
2.python/3.Apply/1.masterPrj/paraTest/: plotExtrTest.py  plotExtrTest_5Axes.py
2.python/3.Apply/1.masterPrj/plotVertex/: plot3DPoint.m  plot3DPoint.py
2.python/3.Apply/1.masterPrj/pnPpoint/: calcPnPPoint.py
2.python/3.Apply/2.Pseudo_Terminal/: mpty.py
2.python/3.Apply/3.serial/: mpty.py  pySerRdWr.py
2.python/3.Apply/4.socket/: clientThread.py  serverThread.py  thread.py
2.python/3.Apply/5.videoopt/: 1.openCam.py  2.capPic.py  3.capVideo.py
2.tcl/: doc_tcl.md  doc_tk.md
3.cmake/: ReadMe.md
3.cmake/mDemo/: CMakeLists.txt  config.h.in
3.cmake/mDemo/src/: CMakeLists.txt  main.c  main.cmake
3.cmake/mDemo/src/math/: CMakeLists.txt  mathFunctions.h
3.cmake/mDemo2/: CMakeLists.txt
3.cmake/mDemo2/src/: CMakeLists.txt  main.c
4.makefile/: doc.md  doc1.md  doc2.md
4.makefile/demo/: Makefile  mfunc.c  mfunc.h  mfunc2.c  test.c  test2.c
4.makefile/demo/subdir1/: Makefile
4.makefile/demo/subdir2/: Makefile
4.makefile/demo2_var_share/: Makefile  common.mk
4.makefile/demo2_var_share/subdir1/: Makefile
4.makefile/demo2_var_share/subdir2/: Makefile
4.makefile/demo2_var_share/subdir3/: Makefile
5.autotool/: readme.md
5.autotool/demo/: Makefile.am  configure.ac  run.sh
5.autotool/demo/src/: Makefile.am  main.c  prn.c  prn.h
6.android_build/demo_cmake/: CMakeLists.txt  main.c  prjBuild.sh
6.android_build/demo_cmake_2/: CMakeLists.txt  main.cpp  prjBuild.sh
6.android_build/tools_clang/: prjBuild.sh
6.android_build/tools_gcc/: prjBuild.sh
7.meson/: ReadMe.md
7.meson/1.base_demo/: demo.sh
7.meson/2.meson_prj/: build_run.sh
7.meson/3.cross_compile_android/: cross_file.txt  hello.c  meson.build
7.meson/3.cross_compile_base/: build.sh  cross_file.txt
7.meson/3.cross_compile_linux/: cross_file.txt
8.tcl/: doc_tcl.md
demo/: cmd_paras.sh  echo_color.sh
